test/errors/resolution/incompatibleKinds.1.good
incompatibleKinds.chpl:3: error: a regular variable cannot be initialized with a type
incompatibleKinds.chpl:4: error: a type variable cannot be initialized with a regular value
incompatibleKinds.chpl:7: error: a 'param' cannot be initialized with a non-'param' value
incompatibleKinds.chpl:10: error: a regular variable cannot be initialized with a type
incompatibleKinds.chpl:13: error: a regular variable cannot be initialized with a type
